# FreeDS-Setup

./: .gitignore  README.md  pull.sh  pyproject.toml
src/freeds_plugin/: s3.py  vault.py
src/freeds_setup/: cli.py
src/freeds_setup/commands/: init_cmd.py  pwd.py  scan_cmd.py  vault.py  vault_cmd.py
src/freeds_setup/deploy/: deployment_classes.py
src/freeds_setup/helpers/: bao_client.py  dc.py  flog.py  freeds_root.py  import.py  init.py  root_config.py  vault.py
src/freeds_setup/importing/: import.py  plugin_config.py  plugin_import.py  resource_classes.py
src/freeds_setup/resource/: provision.py  resource_classes.py
