[project]
name = "freeds-setup"
version = "0.1.0"
description = "Setup tools for The Free Data Stack"
readme = "README.md"
requires-python = ">=3.10,<4.0"
authors = [
    { name = "freeds", email = "freeds@jensbox.se" }
]

dependencies = [
    "typer>=0.12.0",
    "loguru (>=0.7.3,<0.8.0)",
    "gitpython (>=3.1.45,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
]

[project.scripts]
freeds-setup = "freeds_setup.cli:app"

[tool.poetry]
packages = [
    { include = "freeds_setup", from = "src" }
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
